<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/iv_user"
        android:layout_alignTop="@+id/iv_user"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@+id/iv_user"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Lorensius Londa"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="lorensiuswlt" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewFollowersLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_count_followers"
                android:layout_toLeftOf="@+id/tv_count_followers"
                android:text="@string/followers"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_count_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewFollowersLostLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_count_followers_lost"
                android:layout_toLeftOf="@+id/tv_count_followers_lost"
                android:text="@string/lost_followers"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_count_followers_lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewFollowersGainLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_count_followers_gain"
                android:layout_toLeftOf="@+id/tv_count_followers_gain"
                android:text="@string/gain_followers"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_count_followers_gain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_user"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/text_signout" />

            
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_logout"
        android:layout_marginTop="@dimen/activity_vertical_margin" >

            <ListView
            android:id="@+id/countersListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true" />
            
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="5dp"
            android:numColumns="2"
            android:padding="5dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>